--- a/index.html
+++ b/index.html
@@ -233,10 +233,21 @@
               <div class="contact-heading text-center">
                 Portfolio <i class="bi bi-chevron-double-down sec5-icon"></i>
               </div>
+              <br />
               <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ccFRbgERWwI?si=bQlMctsRp2c0KmK2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe
+                  width="960"
+                  height="540"
+                  src="https://www.youtube.com/embed/ccFRbgERWwI?si=bQlMctsRp2c0KmK2"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allowfullscreen
+                ></iframe>
               </div>
             </div>
+          </div>
+          <div class="section-5-text text-center">
+            The Pursuit of Excellence
           </div>
         </div>
       </section>
